load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/kentro-lab/cloudy-neigh/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/api:api_go_proto",
        "@com_github_gogo_status//:status",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
