load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "apipb_proto",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "apipb_go_proto",
    importpath = "github.com/kentro-lab/cloudy-neigh/proto/apipb",
    proto = ":apipb_proto",
    visibility = ["//visibility:public"],
)
