load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "vector_proto",
    srcs = ["vector.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "vector_go_proto",
    importpath = "github.com/kentro-lab/cloudy-neigh/proto/vector",
    proto = ":vector_proto",
    visibility = ["//visibility:public"],
)
